--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ asgiref==3.4.1
 async-generator==1.10
 async-timeout==4.0.1
 attrs==21.2.0
-autobahn==21.3.1
 Automat==20.2.0
 backcall==0.2.0
 bleach==4.1.0
@@ -28,7 +27,7 @@ Django==3.2.9
 django-appconf==1.0.5
 django-ckeditor==6.1.0
 django-cors-middleware==1.5.0
-django-crispy-forms
+django-crispy-forms==1.13.0
 django-debug-toolbar==3.2.2
 django-filter==21.1
 django-geoip==0.5.2.1
@@ -51,13 +50,10 @@ idna==3.3
 importlib-metadata==4.8.2
 importlib-resources==5.4.0
 incremental==21.3.0
-ipykernel==6.6.0
-ipython==7.30.1
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
 jedi==0.18.1
 Jinja2==3.0.3
-jsonschema==4.2.1
 jupyter==1.0.0
 jupyter-client==7.1.0
 jupyter-console==6.4.0
@@ -75,7 +71,6 @@ mistune==0.8.4
 msgpack==1.0.2
 multidict==5.2.0
 nbclient==0.5.9
-nbconvert==6.3.0
 nbformat==5.1.3
 nest-asyncio==1.5.4
 notebook==6.4.6
@@ -123,8 +118,6 @@ sqlparse==0.4.2
 terminado==0.12.1
 testpath==0.5.0
 tornado==6.1
-traitlets==5.1.1
-Twisted==21.7.0
 txaio==21.2.1
 typing-extensions==4.0.0
 ua-parser==0.10.0
