--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,18 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+migrations/
 # C extensions
+**/migrations/*
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
 *.so
-
+.idea
 # Distribution / packaging
 .Python
 build/
+*/migrations
 develop-eggs/
 dist/
 downloads/
@@ -155,9 +160,6 @@ cython_debug/
 
 /analytics/migrations
 
-
-/analytics/migrations
-
 /chat/migrations
 /home/migrations
 /order/migrations
@@ -165,3 +167,4 @@ cython_debug/
 /users/migrations
 
 /home/static
+/competition/migrations/
