--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,14 +45,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3.3.0
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4.5.0
-      with:
-        python-version: ${{ matrix.python-version }}
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install -r requirements.txt
     - name: Run the Container
       env:
         DATABASE_ENGINE: ${{ matrix.database-engine }}
@@ -66,6 +58,15 @@ jobs:
         docker-compose up
         docker-compose exec server python manage.py migrate
         docker-compose exec server python manage.py test
+#    - name: Set up Python ${{ matrix.python-version }}
+#      uses: actions/setup-python@v4.5.0
+#      with:
+#        python-version: ${{ matrix.python-version }}
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install -r requirements.txt
+
 
 #    - uses: actions/checkout@v3.3.0
 #    - name: Build the images and start the containers
