--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,9 @@ jobs:
         DATABASE_PORT: ${{ matrix.database-port }}
         DJANGO_DEBUG: ${{ matrix.django-debug }}
       run:
-        docker-compose up
+        docker-compose -f docker-compose.yaml build
+        docker-compose -f docker-compose.yaml up -d
+        #        # run: docker-compose up -d --build
         docker-compose exec server python manage.py migrate
         docker-compose exec server python manage.py test
 #    - name: Set up Python ${{ matrix.python-version }}
