--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3.3.0
+    - script:
+        - curl -L "https://github.com/docker/compose/releases/download/v2.2.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && chmod +x /usr/local/bin/docker-compose
     - name: Run the Container
       env:
         DATABASE_ENGINE: ${{ matrix.database-engine }}
