--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,38 +27,31 @@ jobs:
           - true
 
     services:
-      postgres:
-        image: postgres:latest
-        env:
-          POSTGRES_DB: ${{ matrix.database-name }}
-          POSTGRES_USER: ${{ matrix.database-user }}
-          POSTGRES_PASSWORD: ${{ matrix.database-password }}
+      postgres: # we need a postgres docker image to be booted a side car service to run the tests that needs a db
+        image: postgres
+        env: # the environment variable must match with app/settings.py if block of DATBASES variable otherwise test will fail due to connectivity issue.
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: github-actions
         ports:
-          - 5432:5432
-        # Set health checks to wait until postgres has started
-        options:
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
+          - 5432:5432 # exposing 5432 port for application to use
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
+    - name: Checkout Code
     - uses: actions/checkout@v3.3.0
-    - script:
-        - curl -L "https://github.com/docker/compose/releases/download/v2.2.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && chmod +x /usr/local/bin/docker-compose
-    - name: Run the Container
-      env:
-        DATABASE_ENGINE: ${{ matrix.database-engine }}
-        DATABASE_NAME: ${{ matrix.database-name }}
-        DATABASE_USER: ${{ matrix.database-user }}
-        DATABASE_PASSWORD: ${{ matrix.database-password }}
-        DATABASE_HOST: ${{ matrix.database-host }}
-        DATABASE_PORT: ${{ matrix.database-port }}
-        DJANGO_DEBUG: ${{ matrix.django-debug }}
-      run:
-        docker-compose -f docker-compose.yaml build
-        docker-compose -f docker-compose.yaml up -d
-        docker-compose exec server python manage.py migrate
-        docker-compose exec server python manage.py test
+    - name: Cache dependency # caching dependency will make our build faster.
+        - uses: actions/cache@v2 # for more info checkout pip section documentation at https://github.com/actions/cache
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
+    - name: Setup python environment # setting python environment to 3.x
+        - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+    - name: Check Python version # checking the python version to see if 3.x is installed.
+        - run: python --version
