--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
     steps:
     - name: Checkout Code
-    - uses: actions/checkout@v3.3.0
+      uses: actions/checkout@v3.3.0
     - name: Cache dependency # caching dependency will make our build faster.
         - uses: actions/cache@v2 # for more info checkout pip section documentation at https://github.com/actions/cache
         with:
