--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,7 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3.3.0
+    - uses: actions/checkout@v3.3.0
     - name: Cache dependency # caching dependency will make our build faster.
         - uses: actions/cache@v2 # for more info checkout pip section documentation at https://github.com/actions/cache
         with:
