--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Django CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, collaborative_py ]
   pull_request:
     branches: [ main ]
 
