--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ django-user-sessions==1.7.1
 django-widget-tweaks==1.4.9
 djangorestframework==3.12.4
 entrypoints==0.3
+environ==1.0
 frozenlist==1.2.0
 geoip2==4.4.0
 greenlet==1.1.2
